<resources>
    <!--App strings-->
    <string name="app_name">TM_Parkeerwachter</string>
    <string name="welkom">Welkom bij de TM Parkeerwachter app. Log in om te starten.</string>
    <string name="main_parkeerwachter_label">Parkeerwachter:</string>
    <string name="main_pincode_label">Pincode:</string>
    <string name="main_login_error">Pincode fout</string>
    <string name="main_login_button">Login</string>

    <!--OvertredingActivity strings-->
    <string name="overtreding_nummerplaatLabel">Nummerplaat:</string>
    <string name="overtreding_parkeerwachterLabel">Parkeerwachter:</string>
    <string name="overtreding_gevolgTypeLabel">Gevolg:</string>
    <string name="overtreding_datumLabel">Datum:</string>
    <string name="overtreding_zoekButton">Zoeken</string>
    <string name="overtreding_toggleButton_on">Inklappen</string>
    <string name="overtreding_toggleButton_off">Uitbreiden</string>

    <!--NieuweOvertredingActivity strings-->
    <string name="nieuweOvertreding_terugknop">Annuleer</string>
    <string name="nieuweOvertreding_bevestigknop">Bevestig</string>
    <string name="nieuweOvertreding_informatie">Tik op de nummerplaat om ze aan te passen indien ze niet correct gelezen is.</string>
    <string name="nieuweOvertreding_extrafotoknop">Neem extra foto</string>
    <string name="nieuweOvertreding_fototerugknop">Terug</string>
    <string name="nieuweOvertreding_verwijderfotoknop">Verwijder foto</string>
    <string name="nieuweOvertreding_wachtOpLocatie">Coördinaten worden opgehaald, even geduld aub</string>
    <string name="nieuweOvertreding_gpsInstructie">Zet locatieservices aan indien deze uitgeschakeld zijn</string>
    <string name="nieuweOvertreding_extraFotoInstructie">Tik een thumbnail aan voor een foto    uit te breiden</string>

    <!--OvertredingDetailActivity strings-->
    <string name="detail_overtreding_header">Overtreding Gegevens</string>
    <string name="detail_gevolg_header">Gevolg Gegevens</string>
    <string name="detail_parkeerwachter_header">Parkeerwachter Gegevens</string>
    <string name="detail_andereOvertredingen_header">Andere Overtredingen</string>
    <string name="detail_andereFoto_header">Extra Foto\'s</string>

    <string name="detail_nummerplaat_label">Nummerplaat:</string>
    <string name="detail_datum_label">Datum: </string>
    <string name="detail_breedtegraad_label">Breedtegraad: </string>
    <string name="detail_lengtegraad_label">Lengtegraad: </string>

    <string name="detail_gevolg_label">Gevolg van overtreding: </string>

    <string name="detail_parkeerwachter_label">Parkeerwachter: </string>
    <string name="detail_opmerking_label">Opmerking van parkeerwachter: </string>

    <!--MenuActivity strings-->
    <string name="menu_welkom_label">Welkom</string>
    <string name="menu_nieuweOvertreding">Nieuwe Overtreding</string>
    <string name="menu_lijstOvertreding">Overtreding Lijst</string>
    <string name="menu_logout">Uitloggen</string>
    <string name="menu_upload">Upload Fotos</string>
    <string name="menu_uploading">Even geduld aub</string>

    <!--NieuweOvertredingAfhandelingActivity strings-->
    <string name="nieuweOvertredingAfhandeling_geenGeassocieerdeOvertredingen">Er zijn nog geen geregistreerde overtredingen voor deze nummerplaat</string>
    <string name="nieuweOvertredingAfhandeling_geassocieerdeOvertredingen">Geassocieerde overtredingen met deze nummerplaat:</string>
    <string name="nieuweOvertredingAfhandeling_titel">Overtreding registreren</string>
    <string name="nieuweOvertredingAfhandeling_gevolg">Bepaal welk gevolg aan de overtreding gekoppeld wordt:</string>
    <string name="nieuweOvertredingAfhandeling_opmerking">Voorzie de overtreding van een opmerking/beschrijving:</string>
    <string name="nieuweOvertredingAfhandeling_terugknop">Annuleer</string>
    <string name="nieuweOvertredingAfhandeling_bevestigknop">Bevestig</string>
</resources>