<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NieuweOvertredingAfhandelingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/nieuweOvertredingAfhandeling_titel" />

        <TextView
            android:id="@+id/nummerplaat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/voorgaandeOvertredingen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <ListView
            android:id="@+id/geassocieerdeOvertredingen"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:dividerHeight="1dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nieuweOvertredingAfhandeling_gevolg" />

        <Spinner
            android:id="@+id/gevolgTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nieuweOvertredingAfhandeling_opmerking"/>

        <EditText
            android:id="@+id/opmerking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/terugknop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertredingAfhandeling_terugknop"
                android:onClick="annuleerOvertreding" />

            <Button
                android:id="@+id/bevestigknop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertredingAfhandeling_bevestigknop"
                android:onClick="slaOvertredingOp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>