<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OvertredingActivity">

    <LinearLayout
        android:id="@+id/overtredingen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/overtreding_nummerplaatLabel"
            android:labelFor="@id/zoekNummerplaat"
            />
        <EditText
            android:id="@+id/zoekNummerplaat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/overtreding_parkeerwachterLabel"
            android:labelFor="@id/zoekParkeerwachter"
            />
        <Spinner
            android:id="@+id/zoekParkeerwachter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/overtreding_gevolgTypeLabel"
            android:labelFor="@id/zoekGevolgType"
            />
        <Spinner
            android:id="@+id/zoekGevolgType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/overtreding_datumLabel"
            android:labelFor="@id/zoekDatum"
            />
        <Spinner
            android:id="@+id/zoekDatum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            />
        <Button
            android:id="@+id/zoekOvertredingen"
            android:text="@string/overtreding_zoekButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="zoeken"/>

        <ListView
            android:id="@+id/overtredingenLijst"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="1dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>