<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NieuweOvertredingActivity" >
    <RelativeLayout
        android:id="@+id/fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" >
        <ImageView
            android:id="@+id/fullscreenFotoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"  />
        <LinearLayout
            android:id="@+id/fotoknoppen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp" >
            <Button
                android:id="@+id/fototerugknop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertreding_fototerugknop"
                android:onClick="sluitFoto"
                android:layout_weight="1" />
            <Button
                android:id="@+id/fotoverwijderknop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertreding_verwijderfotoknop"
                android:onClick="verwijderFoto"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/volledigeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp" >
            <ImageView
                android:id="@+id/nummerplaatView"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />
            <TextView
                android:id="@+id/instructie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nieuweOvertreding_informatie" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical" >
                    <EditText
                        android:id="@+id/nummerplaat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                    <Button
                        android:id="@+id/extraFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nieuweOvertreding_extrafotoknop"
                        android:onClick="extraFoto" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
                <LinearLayout
                    android:id="@+id/extraFotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/paginaknoppen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp" >
            <Button
                android:id="@+id/terugknop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertreding_terugknop"
                android:onClick="annuleerOvertreding"
                android:layout_weight="1" />
            <Button
                android:id="@+id/bevestigknop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nieuweOvertreding_bevestigknop"
                android:onClick="bevestigNummerplaat"
                android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/evenGeduld"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="200dp"
        android:visibility="invisible"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/nieuweOvertreding_gpsInstructie"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/nieuweOvertreding_wachtOpLocatie"
            android:gravity="center" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>